<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.goodthings.app.activity.verifcode.VerifCodeActivity"
    android:background="@mipmap/loginback">

    <TextView
        android:id="@+id/service_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="90dp"
        android:text="@string/service_phone"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <include
        android:id="@+id/include"
        layout="@layout/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/verifcode_tv"
        android:layout_below="@id/include"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/border_corner_5"
        android:layout_centerHorizontal="true"
        android:text="验证码：60"
        android:gravity="center"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/verifcode_phone"
        android:layout_below="@id/verifcode_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="已发送手机号：15510488345"
        android:textColor="@color/white"/>

    <com.goodthings.app.view.VerifyCodeView
        android:id="@+id/verifcode_input"
        android:layout_below="@id/verifcode_phone"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:inputType="number"
        android:textColor="@color/white">

    </com.goodthings.app.view.VerifyCodeView>

    <RelativeLayout
        android:id="@+id/psd_layout"
        android:layout_below="@id/verifcode_input"
        android:layout_width="@dimen/input_width"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:visibility="gone">
        <TextView
            android:id="@+id/verifcode_input_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:text="@string/first_login"
            android:visibility="visible"/>
        <TextView
            android:id="@+id/verifcode_newpsd_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="left"
            android:layout_alignParentLeft="true"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:text="@string/newpsd"
            android:visibility="visible"/>

        <LinearLayout
            android:layout_width="@dimen/input_width"
            android:layout_height="@dimen/input_height"
            android:layout_marginTop="65dp"
            android:padding="7dp"
            android:background="@drawable/border_corner_5">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="5dp"
                android:src="@mipmap/mima2"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/white"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp">
                <ImageView
                    android:id="@+id/verifcode_psd_del"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/del_input"
                    android:layout_alignParentRight="true"
                    android:visibility="invisible"
                    />
                <EditText
                    android:id="@+id/verifcode_psd_et"
                    android:layout_toLeftOf="@id/psd_psd_del"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:hint="@string/input_psd"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:textColorHint="@color/grey_white"
                    android:textSize="@dimen/input_text_size"
                    android:textColor="@color/white"
                    android:background="@color/transparent"/>
            </RelativeLayout>

        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/verifcode_commit"
        android:layout_below="@id/psd_layout"
        android:layout_marginTop="30dp"
        android:layout_width="@dimen/input_width"
        android:layout_height="@dimen/input_height"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_white_corner_5"
        android:text="@string/login"
        android:textColor="@color/lightblue"/>
</RelativeLayout>
