<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.goodthings.app.activity.login.LoginActivity">
    <include
        android:id="@+id/include"
        layout="@layout/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <LinearLayout
        android:layout_below="@id/include"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@mipmap/loginback"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/headview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/touxiang" />

            <TextView
                android:id="@+id/nick_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/loggin_welcome"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/msglayout"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="@dimen/input_width"
                    android:layout_height="@dimen/input_height"
                    android:background="@drawable/border_corner_5"
                    android:padding="7dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:layout_marginRight="5dp"
                        android:src="@mipmap/inphone" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/white" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp">

                        <ImageView
                            android:id="@+id/msg_phone_del"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:src="@mipmap/del_input"
                            android:visibility="invisible" />

                        <EditText
                            android:id="@+id/msg_phone_et"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginRight="5dp"
                            android:layout_toLeftOf="@id/msg_phone_del"
                            android:background="@color/transparent"
                            android:hint="@string/input_phone"
                            android:inputType="phone"
                            android:maxLength="11"
                            android:textColor="@color/white"
                            android:textColorHint="@color/grey_white"
                            android:textSize="@dimen/input_text_size" />
                    </RelativeLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/msg_commit_bt"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_height"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/bg_white_corner_5"
                    android:text="@string/next"
                    android:textColor="@color/lightblue" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/next_tip"
                    android:textColor="@color/grey_white" />

                <TextView
                    android:id="@+id/service_xieyi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/protocol"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/psdlayout"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="@dimen/input_width"
                    android:layout_height="@dimen/input_height"
                    android:background="@drawable/border_corner_5"
                    android:padding="7dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:layout_marginRight="5dp"
                        android:src="@mipmap/inphone" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/white" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp">

                        <ImageView
                            android:id="@+id/psd_phone_del"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:src="@mipmap/del_input"
                            android:visibility="invisible" />

                        <EditText
                            android:id="@+id/psd_phone_et"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginRight="5dp"
                            android:layout_toLeftOf="@id/psd_phone_del"
                            android:background="@color/transparent"
                            android:hint="@string/input_phone"
                            android:inputType="phone"
                            android:maxLength="11"
                            android:textColor="@color/white"
                            android:textColorHint="@color/grey_white"
                            android:textSize="@dimen/input_text_size" />
                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/input_width"
                    android:layout_height="@dimen/input_height"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/border_corner_5"
                    android:padding="7dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:layout_marginRight="5dp"
                        android:src="@mipmap/mima2" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/white" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp">

                        <ImageView
                            android:id="@+id/psd_psd_del"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:src="@mipmap/del_input"
                            android:visibility="invisible" />

                        <EditText
                            android:id="@+id/psd_psd_et"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginRight="5dp"
                            android:layout_toLeftOf="@id/psd_psd_del"
                            android:background="@color/transparent"
                            android:hint="@string/input_psd"
                            android:inputType="textPassword"
                            android:maxLength="16"
                            android:textColor="@color/white"
                            android:textColorHint="@color/grey_white"
                            android:textSize="@dimen/input_text_size" />
                    </RelativeLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/psd_forgetpsd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/forgetpsd"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

                <Button
                    android:id="@+id/psd_commit"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_height"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/bg_white_corner_5"
                    android:text="@string/login"
                    android:textColor="@color/lightblue" />

            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/changelayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="70dp"
                    android:layout_height="1dp"
                    android:background="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/other_login_way"
                    android:textColor="@color/white" />

                <View
                    android:layout_width="70dp"
                    android:layout_height="1dp"
                    android:background="@color/white" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/login_way_ck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/loginway_select"
                android:button="@null"
                android:gravity="bottom" />

            <TextView
                android:id="@+id/login_way_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/login_psd"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/login_firstregist_hboutlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <RelativeLayout
            android:id="@+id/login_firstregist_hblayout"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_centerInParent="true"
            android:background="@mipmap/login_registhb_bg">
            <ImageView
                android:id="@+id/login_firstregist_hbclose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@mipmap/close"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="145dp"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="初次见面,好事发生送您见面红包"
                    android:textSize="16sp"
                    android:textColor="@color/grey_333333"/>

                <TextView
                    android:id="@+id/login_firstregist_hb_money"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:textSize="25sp"
                    android:textColor="@color/grey_333333"
                    android:textStyle="bold"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="已存入钱包"
                    android:textSize="14sp"
                    android:textColor="@color/grey_333333"/>
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
