<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.goodthings.app.activity.regist.RegistActivity"
    android:background="@mipmap/loginback"
    android:id="@+id/regist_root">
    <include
        android:id="@+id/include"
        layout="@layout/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <LinearLayout
        android:id="@+id/headlayout"
        android:layout_below="@id/include"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical"
        >
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/regist_headview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/touxiang"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uploadheadpic"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_below="@id/headlayout"
        android:layout_width="@dimen/input_width"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="输入昵称:"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="@dimen/input_width"
            android:layout_height="@dimen/input_height"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_corner_5"
            android:padding="7dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp">

                <ImageView
                    android:id="@+id/nickanme_del"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/del_input"
                    android:visibility="invisible" />

                <EditText
                    android:id="@+id/nickname_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:layout_toLeftOf="@id/msg_phone_del"
                    android:background="@color/transparent"
                    android:hint="@string/input_nickname"
                    android:maxLength="6"
                    android:textColor="@color/white"
                    android:textColorHint="@color/grey_white"
                    android:textSize="@dimen/input_text_size" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="选择性别："
                android:textColor="@color/white"/>
            <RadioGroup
                android:id="@+id/sex_rbgroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/sex_nan"
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:button="@null"
                    android:gravity="center"
                    android:checked="true"
                    android:background="@drawable/rb_sex_select"
                    android:textColor="@color/lightblue"
                    android:text="男"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" or "
                    android:textColor="@color/white"/>

                <RadioButton
                    android:id="@+id/sex_nv"
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:button="@null"
                    android:gravity="center"
                    android:background="@drawable/rb_sex_select"
                    android:textColor="@color/lightblue"
                    android:text="女"/>
            </RadioGroup>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" (不可更改)"
                android:textColor="@color/white"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="选择年龄："
            android:textColor="@color/white"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioGroup
                android:id="@+id/age_radiogroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/age_5"
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:button="@null"
                    android:gravity="center"
                    android:checked="true"
                    android:background="@drawable/rb_sex_select"
                    android:textColor="@color/lightblue"
                    android:textSize="12sp"
                    android:text="00后"/>

                <RadioButton
                    android:id="@+id/age_4"
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="15dp"
                    android:button="@null"
                    android:gravity="center"
                    android:background="@drawable/rb_sex_select"
                    android:textColor="@color/lightblue"
                    android:textSize="12sp"
                    android:text="90后"/>
                <RadioButton
                    android:id="@+id/age_3"
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="15dp"
                    android:button="@null"
                    android:gravity="center"
                    android:background="@drawable/rb_sex_select"
                    android:textColor="@color/lightblue"
                    android:textSize="12sp"
                    android:text="80后"/>
                <RadioButton
                    android:id="@+id/age_2"
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="15dp"
                    android:button="@null"
                    android:gravity="center"
                    android:background="@drawable/rb_sex_select"
                    android:textColor="@color/lightblue"
                    android:textSize="12sp"
                    android:text="70后"/>
                <RadioButton
                    android:id="@+id/age_1"
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="15dp"
                    android:button="@null"
                    android:gravity="center"
                    android:background="@drawable/rb_sex_select"
                    android:textColor="@color/lightblue"
                    android:textSize="12sp"
                    android:text="60后"/>
            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/regist_commit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_white_corner_5"
            android:text="@string/save"
            android:textColor="@color/lightblue" />
    </LinearLayout>
</RelativeLayout>
